# chat_app

./: README.md
app/: package-lock.json  package.json
app/app/: page.tsx
app/app/(auth)/: authform.tsx
app/app/(auth)/login/: page.tsx
app/app/(auth)/register/: page.tsx
app/app/chat/: listener.tsx  messageinput.tsx  page.tsx
webapi/: Cargo.toml
webapi/src/: auth.rs  database.rs  handlers.rs  main.rs
